# controllers/label.go
@@ -8,16 +8,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// CreateLabel godoc
-// @Summary Create Label data
-// @Description Add by JSON Label
-// @Tags label
-// @Accept  json
-// @Produce  json
-// @Param label body models.Label true "Add Label"
-// @success 200 {object} models.Label
-// @Router /label [post]
-
+//CreateLabel godoc
+//@Summary Create Label data
+//@Description Add by JSON Label
+//@Tags label
+//@Accept  json
+//@Produce  json
+//@Param label body models.Label true "Add Label"
+//@success 200 {object} models.Label
+//@Router /label [post]
 func CreateLabel(c *gin.Context) {
 	var label models.Label
 	c.ShouldBindJSON(&label)
