# controllers/project.go
@@ -8,16 +8,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// CreateProject godoc
-// @Summary Create Project data
-// @Description Add by JSON Project
-// @Tags project
-// @Accept  json
-// @Produce  json
-// @Param project body models.Project true "Add Project"
-// @success 200 {object} models.Project
-// @Router /project [post]
-
+//CreateProject godoc
+//@Summary Create Project data
+//@Description Add by JSON Project
+//@Tags project
+//@Accept  json
+//@Produce  json
+//@Param project body models.Project true "Add Project"
+//@success 200 {object} models.Project
+//@Router /project [post]
 func CreateProject(c *gin.Context) {
 	var project models.Project
 	c.ShouldBindJSON(&project)
